<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_in_background"
    tools:context="com.idea.engineering.ssska.presentation_layer.sign_in.SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/offset_normal2"
        android:layout_marginStart="@dimen/offset_normal2">

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/email"
            android:textColor="@color/email_text_color"
            android:textSize="@dimen/text_size_4" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/offset_small2"
            android:text="serpokrylow@alexandr@gmail.com"
            android:layout_toEndOf="@id/password_text_view"
            android:textSize="@dimen/text_size_4" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/email_edit_text"
            android:layout_marginTop="@dimen/offset_small6"
            android:text="@string/password"
            android:textColor="@color/password_text_color"
            android:textSize="@dimen/text_size_4" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/email_edit_text"
            android:layout_marginStart="@dimen/offset_small2"
            android:layout_marginTop="@dimen/offset_small6"
            android:layout_toEndOf="@id/password_text_view"
            android:inputType="textPassword"
            android:text="12345678"
            android:textSize="@dimen/text_size_4" />
    </RelativeLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pink_gradient_background"
        android:text="@string/sign_in"
        android:textColor="@color/sign_in_button_text_color"
        android:textSize="@dimen/text_size_4" />
</RelativeLayout>
