<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_to_bag_button"
        android:background="@color/product_page_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/offset_small6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small5">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/cross_image_view"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/name_text"
                    android:textSize="@dimen/text_size_5" />

                <ImageView
                    android:id="@id/cross_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/cross" />

            </RelativeLayout>

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small4"
                android:textColor="@color/price_text"
                android:textSize="@dimen/text_size_1" />

            <com.eidea.testapplication.presentation_layer.custom_view.WrapContentHeightViewPager
                android:id="@+id/image_view_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_image_height"
                android:layout_marginTop="@dimen/offset_small6" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/image_view_pager_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                app:fillColor="@color/page_indicator_fill"
                app:pageColor="@color/page_indicator_page"
                app:strokeColor="@color/page_indicator_stroke" />

            <ImageView
                android:id="@+id/description_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_description" />

            <TextView
                android:id="@+id/description_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                android:gravity="center_horizontal"
                android:text="@string/product_description"
                android:textAlignment="center"
                android:textColor="@color/product_description_title_text"
                android:textSize="@dimen/text_size_4" />

            <android.support.text.emoji.widget.EmojiTextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/product_description_text"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/color_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_colors" />

            <TextView
                android:id="@+id/select_color_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/offset_normal2"
                android:layout_marginStart="@dimen/offset_normal2"
                android:layout_marginTop="@dimen/offset_small6"
                android:gravity="center_horizontal"
                android:text="@string/select_color"
                android:textAlignment="center"
                android:textColor="@color/select_color_text"
                android:textSize="@dimen/text_size_4" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/color_recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/offset_small6"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal" />
                </FrameLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@id/add_to_bag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pink_gradient_background"
        android:gravity="center"
        android:paddingBottom="@dimen/offset_small4"
        android:paddingTop="@dimen/offset_small4"
        android:text="@string/add_to_bag"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/add_to_bag_text" />
</RelativeLayout>